examples/type_system/failing/181_effect_missing_colon.flx
effect Console { print String -> None }
let after = 1
